# javsub

./: .gitignore  LICENSE  README.md  javsub-design.md  javsub-future.md  pyproject.toml
.github/workflows/: ci.yml
engine/: asr.py  config.py  final_prompt.txt  javsub.py  srt_utils.py  translate.py
engine/tests/: test_config.py  test_srt_utils.py  test_translate.py
