[project]
name = "javsub"
version = "0.1.0"
description = "Transcribe and translate JAV videos to Chinese subtitles"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "mlx-qwen3-asr>=0.3.5",
]

[project.optional-dependencies]
test = ["pytest", "ruff"]

[project.scripts]
javsub = "engine.javsub:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
